# AgentBot

./: .env  .gitignore  README.md  flake.nix  package.json  pyproject.toml
src/: config.py  config.ts  dataSource.ts  db.py  main.py  one_on_ones.py  types.d.ts  utils.py  web.py
src/commands/: hello.ts
src/entities/: DiscordUser.ts  PastMatch.ts
src/scripts/: birthdays.py  db_setup.py  dump_channel_ids.py  get_channel_counts.js  hack_path.py  import_matches.py  import_users.py  legacy_import.py  main.ts  scrape_msgs.py  updateCommands.ts
src/static/: index.html
