[tool.poetry]
name = "agentbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^2.3.2"
aiohttp = "^3.8.6"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
